preprod-manifest/manifests/14-uploads-loader-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: uploads-loader
  namespace: lab-k8s
  labels:
    app.kubernetes.io/name: uploads-loader
    app.kubernetes.io/part-of: blog-back
spec:
  restartPolicy: Never
  nodeSelector:
    kubernetes.io/hostname: rke2-worker-2
  containers:
    - name: uploads-loader
      image: busybox:1.36
      command:
        - sh
        - -c
        - "mkdir -p /uploads && sleep 3600"
      volumeMounts:
        - name: uploads
          mountPath: /uploads
  volumes:
    - name: uploads
      persistentVolumeClaim:
        claimName: blog-back-uploads
