preprod-manifest/manifests/05-blog-back-fpm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-back-fpm
  namespace: lab-k8s
  labels:
    app.kubernetes.io/name: blog-back-fpm
    app.kubernetes.io/part-of: blog-back
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: blog-back-fpm
  ports:
    - name: fpm
      port: 9000
      targetPort: 9000
