preprod-manifest/manifests/17-blog-back-fpm-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blog-back-fpm-network-policy
  namespace: lab-k8s
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blog-back-fpm

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: blog-back-nginx
      ports:
        - protocol: TCP
          port: 9000

  egress:
    # FPM -> ancien PostgreSQL via Service postgres
    - to:
        - ipBlock:
            cidr: 10.43.142.208/32
      ports:
        - protocol: TCP
          port: 5432

    # FPM -> ancien Pod postgres
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgres
      ports:
        - protocol: TCP
          port: 5432

    # FPM -> nouveau writer pg-lab via Service ClusterIP
    - to:
        - ipBlock:
            cidr: 10.43.29.229/32
      ports:
        - protocol: TCP
          port: 5432

    # FPM -> nouveau writer pg-lab via Pod primary réel
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: pg-lab
              app.kubernetes.io/name: postgresql
              app.kubernetes.io/component: primary
      ports:
        - protocol: TCP
          port: 5432

    # FPM -> DNS Kubernetes
    - to:
        - ipBlock:
            cidr: 10.43.0.10/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
